<resources>
    <string name="app_name">MyEmailClient</string>
    <string name="emailPlaceholder">Enter your email</string>
    <string name="passwordPlaceholder">Enter your password</string>
    <string name="login">Login</string>
    <string name="noInternet">No Internet connection</string>
    <string name="yourProfile">Your Profile</string>
    <string name="changeProfile">Change Profile</string>
    <string name="settings">Settings</string>
    <string name="folders">Folders</string>
</resources>