<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/yourProfile"
            android:icon="@drawable/ic_account"
            android:title="@string/yourProfile" />
        <item
            android:id="@+id/changeProfile"
            android:icon="@drawable/ic_change_profile"
            android:title="@string/changeProfile" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/folders" />
    </group>

</menu>